src/test/ui/self/self-vs-path-ambiguity.stderr
error: unexpected lifetime `'a` in pattern
  --> $DIR/self-vs-path-ambiguity.rs:9:11
   |
LL |     fn i(&'a self::S: &S) {}
   |           ^^ unexpected lifetime

error: aborting due to previous error

